Fix wrapping issue with roomsearch prompt

--- a/res/css/structures/_RoomSearch.scss
+++ b/res/css/structures/_RoomSearch.scss
@@ -63,6 +63,7 @@ limitations under the License.
         font-weight: $font-semi-bold;
         color: $light-fg-color;
         margin-right: 6px;
+        white-space: nowrap;
     }
 
     &.mx_RoomSearch_minimized {
